webapp/css/style.css
/* Enter your custom styles here */

.ccBG{
	background-image: linear-gradient(to bottom, #b5cee4, #e7ecf0)!important;
}

/*body {
	height: calc(100% - 4px)!important;
}*/

.ccPanelBG {
	background-color:#b5cee4;
}
.sapMPanel>.sapMPanelHdr, .sapMPanelWrappingDiv, .sapMPanelWrappingDivTb {
	background-color: rgb(240, 245, 249)!important;
	border-bottom:none!important;
}

/* Header Bar Styling */

.sapMITBSelected span{
	border-color:#7d3496;
	color:#7d3496!important;
}

.sapMText{
	color:#666666;
}

/***************** Setting tab strip Container  ************************************/

.ccTabContainer {
	height:100%;
	background-color:#eff4f9;
}

/*.ccTabContainer div[class="sapMTabStripItem"]{
	background-color: #e6ebf0!important;	
}*/

.ccTabContainer > div{
	background-color: transparent;
}

/*.ccTabContainer > div[class="sapMTabStrip"]{
	height: 2.5rem!important;	
}*/

/*.ccTabContainer > div[class="sapMTabContainerContent"] {
	height:calc(100% - 41px);
}*/

/*.sapMTabContainerInnerContent {
	top:0!important;
	height:100%;
}*/

.ccTabContainer button span{
    line-height: 1rem!important;
    color:#346187!important;
}

.sapMTabStrip .sapMTSTabsContainer .sapMTSTabs .sapMTabStripItem .sapMTabStripItemLabel{
    line-height: 2rem!important;
    color:#346187!important;
}

.ccTabContainer div[class="sapMTabContainerContent"]{
	display:none;
}

/***************** Setting NavContainer  ************************************/
.ccVerticalNavCon{
	width: 100%;
	height: 100%;
}

.ccVerticalNavCon > div:nth-child(2){
	display:inline;
}


/*.myPageOverflow > section {
	overflow-y:hidden!important;
}*/

/***************** Setting horizontal sideNav position  ************************************/

.ccTntSideNav{
	background: #3f5161;
    border-right: 1px solid #536b80;
}

.ccTntSideNav div{
	background-color: #3f5161;
	border-bottom: 1px solid #4d6377;
}

div[class="sapMPopoverScroll"] li[class*="sapTntNavLIItemSelected"] {
	background-color: #e6f2f9!important;
    border-bottom: 1px solid #e5e5e5!important;
}

div[class="sapMPopoverScroll"] li[class*="sapTntNavLIItemSelected"] > div {
	background-color: #e6f2f9!important;
    border-bottom: 1px solid #e5e5e5!important;
}

li[class="sapTntNavLIItemSelected"] > div {
	background-color: #496b8a!important;
	border-bottom: 1px solid #4d6377!important;
}

.ccTntSideNav div:hover{
	background-color: #45596a!important;
	border-bottom: 1px solid #4d6377!important;
}

.ccTntSideNav span[class*="sapMText"]{
	color: white!important;
}

.ccTntSideNav span[class*="sapUiIcon"]{
	color: #cae4fb!important;
}

.ccTntSideNav li > ul > li{
    background-color: #394958;
    border:none;
}

.ccTntSideNav li > ul > li:hover{
	background-color: #45596a!important;
	border:none!important;
}

li[class*="sapTntNavLIItemSelected"]{
	background-color: #496b8a!important;
	border-bottom: 1px solid #4d6377!important;
}

.ccHorizontalSideNavCon{
	display: table;
	width: 100%;
	height: 100%;
}

.ccHorizontalSideNavCon > div{
	 display: table-cell;
}

.ccHorizontalSideNavCon > div:nth-child(1){
	 width: 3rem;
	 height:100%;
}

.ccHorizontalSideNavCon > div:nth-child(2){
     height:100%;
     display: block;
}

.ccHorizontalSideNavCon > div > ul{
	overflow-y:auto;
	overflow-x:hidden;
	height: 100%;
}

.ccHorizontalSideNavCon > div > ul > li > ul > li > span{
	margin-right: 10px;
}

/***************** Setting bo container iframe width and height  ************************************/

.bo_container {
	height:calc(100% - 3rem)!important;
	/*overflow-y:scroll!important;*/
	width: 100%;
	border-color:transparent;
	border:none;
	background-color:#f0f5f9;
}

.ccNavCon {
	background-color:#f0f5f9;
}

/***************** Setting bo container iframe width and height  ************************************/

.html_container {
	height:calc(100% - 3rem)!important;
	width: 100%;
	border-color:transparent;
	border:none;
	background-color:#f0f5f9;
}
/**************** Scheduling overview styles ***************************************************************/

.titleScheduleForm{
	font-size : 1rem;
	color:#65bee4;
	margin-left: 1rem;
	border-bottom: 1px dotted #65bee4;
}

/**************** Scheduling manage groups styles ***************************************************************/

div.manageTitle h4{
	background-color:#f0f5f9!important;
}

.selectionList{
	border:1px solid #dddddd;
	background-color:#ffffff;
	width:100%!important;
}

ul.listItem li{
	background:none !important;
	color:black !important;
	user-select:none;
}

ul.listItem li:hover{
	background:#f0f0f0 !important;
	color:black !important;
}
.garbageContainer{
	border:1px dashed #65bee4;
	border-radius: 15px;
	background-color:#ffffff;
	margin-top:8px;
	position:relative;
	width:100%!important;
}
.garbageIcon{
	color: #65bee4;
	font-size : 2rem;
	position:absolute;
	left:45%;
	top:35%;
}
.garbageText{
	color: #65bee4;
}
.groupContainer{
	height:490px!important;
}

.selectedContainer{
	border:1px dashed #65bee4;
	border-radius: 15px;
	background-color:#ffffff;
}

.selectedText{
	color: #65bee4;
	margin-top: 220px;
}

.selectedIcon{
	color: #65bee4;
	font-size : 2rem;
	position:absolute;
	left:45%;
	top:45%;
}
.invisible{
	display:none!important;
}
.ui-draggable-helper {
 border: 1px dotted #bfbfbf;
 background: #f5f5f5 !important;
 color: black !important;
 list-style-type: none;
 border-radius:10px;
}
.ui-droppable-hover {
	background:yellow;
}
.ui-droppable-active{
	background:red;
}
/*.imageResponsive{
	max-height:700px;
	width:100%;
}*/
.imageResponsive {
 /* background-image: url('https://cdn0.vox-cdn.com/uploads/chorus_asset/file/6269301/10788865656_e9bfc7826e_k.jpg');
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position:relative;*/
  background-color:#eff4f9;
}
.horizontalManage{
	display:block;
	width:100%;
}
.backgroundManage{
	width:900px;
	background-color:#eff4f9;
	margin: auto !important;
	  position: absolute !important;
	  left: 50%!important;
	  margin-left: -450px!important;
}
@media (max-width: 1024px) {
		
  .backgroundManage {
  	width:100%;
    left: 0!important;
	  margin-left: 0!important;
	  margin-top:0!important;
  }
  .groupContainer{
	height:150px!important;
}

}


/**************** BO Selection Screen Styles ***************************************************************/
.paddingForm{
	padding-left: 20%;
	padding-right: 20%;
}

@media (max-width: 800px) {
  .paddingForm {
    padding-left: 5%;
	padding-right: 5%;
  }
}
/**************** NAIC Reports Styles ***************************************************************/

.toolbarMargin{
	padding-left:0!important;
}

/**************** Footer ***************************************************************/
.ccImage{
	margin-bottom: 4px;
	margin-right: 10px!important;
}
/* Footer text */
.ccCompanyText {
	color:#cae4fb;
}

.ccContactUsText {
	color:#cae4fb;
}

.ccContactUsText:hover {
	text-decoration:none!important;
	color: white;
}

.ccPopover {
	max-width:700px;
}

